login page - added a centralwidget

--- a/semi-final project/main/forms/login.ui
+++ b/semi-final project/main/forms/login.ui
@@ -16,7 +16,7 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
-  <widget class="QWidget" name="widget" native="true">
+  <widget class="QWidget" name="centralwidget" native="true">
    <property name="geometry">
     <rect>
      <x>0</x>
