--- a/semi-final project/main/forms/login.ui
+++ b/semi-final project/main/forms/login.ui
@@ -29,6 +29,191 @@
     <string notr="true">background: #313338;
 </string>
    </property>
+   <widget class="QLabel" name="Logo">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>50</y>
+      <width>70</width>
+      <height>70</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: url(:/img/goidazvon-logo.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="GoidaZvonLabel">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>60</y>
+      <width>200</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font-family: 'gg sans semibold';
+font-size: 30px;
+line-height: 36px;
+
+color: #FFFFFF;
+
+</string>
+    </property>
+    <property name="text">
+     <string>GoidaZvon</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="LoginWidget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>180</y>
+      <width>400</width>
+      <height>290</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background: #707070;
+border-radius: 15px;
+</string>
+    </property>
+    <widget class="QLabel" name="WelcomeLabel">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>380</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font-family: 'gg sans Semibold';
+font-size: 20px;
+line-height: 22px;
+
+color: #FFFFFF;
+
+</string>
+     </property>
+     <property name="text">
+      <string>Welcome back</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="WelcomeLabel2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>380</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font-family: 'gg sans Normal';
+font-size: 14px;
+line-height: 15px;
+
+color: #FFFFFF;
+
+</string>
+     </property>
+     <property name="text">
+      <string>Hope you will stay with us</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="UsernameLabel">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>360</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font-family: 'gg sans semibold';
+font-size: 14px;
+line-height: 12px;
+
+color: #FFFFFF;
+
+</string>
+     </property>
+     <property name="text">
+      <string>Username or email address</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="UsernameInput">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>80</y>
+       <width>380</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background: #373333;
+border: 0.5px solid #FFFFFF;
+border-radius: 7px;
+
+font-family: 'gg sans semibold';
+font-size: 16px;
+color: #FFFFFF;</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="PasswordLabel">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>130</y>
+       <width>130</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font-family: 'gg sans semibold';
+font-size: 14px;
+line-height: 15px;
+
+color: #FFFFFF;
+
+</string>
+     </property>
+     <property name="text">
+      <string>Password</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>160</y>
+       <width>380</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background: #373333;
+border: 0.5px solid #FFFFFF;
+border-radius: 7px;
+
+font-family: 'gg sans semibold';
+font-size: 16px;
+color: #FFFFFF;</string>
+     </property>
+    </widget>
+   </widget>
   </widget>
  </widget>
  <resources/>
