added clickable labels to login page

--- a/semi-final project/main/forms/login.ui
+++ b/semi-final project/main/forms/login.ui
@@ -39,7 +39,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background: url(:/img/goidazvon-logo.png);</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string/>
